# asteroid-cost-atlas

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOY.md  Dockerfile  Makefile  README.md  pyproject.toml  start.sh
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy.yml
configs/: config.yaml
data/raw/: lcdb_20260330.parquet
docs/: CICD.md  DATA_DICTIONARY.md  METHODOLOGY.md  PHASE_B_SUMMARY.md  PROJECT_AUDIT.md
infra/: apprunner.tf  ecr.tf  iam.tf  outputs.tf  s3.tf  variables.tf  versions.tf
infra/prod/: main.tf
notebooks/: explore_atlas.ipynb
scripts/: after_phase_b.json  audit.py  baseline_phase_b.json  ship.sh
src/asteroid_cost_atlas/: __init__.py  settings.py
src/asteroid_cost_atlas/api/: app.py  deps.py  schemas.py
src/asteroid_cost_atlas/api/routes/: asteroids.py  search.py  stats.py
src/asteroid_cost_atlas/ingest/: __init__.py  clean_sbdb.py  enrich.py  ingest_horizons.py  ingest_lcdb.py  ingest_movis.py  ingest_neowise.py  ingest_sbdb.py  ingest_spectral.py
src/asteroid_cost_atlas/models/: __init__.py  asteroid.py
src/asteroid_cost_atlas/scoring/: __init__.py  composition.py  economic.py  ml_classifier.py  orbital.py  overlays.py  physical.py
src/asteroid_cost_atlas/utils/: __init__.py  query.py
tests/: conftest.py  test_api.py  test_clean_sbdb.py  test_composition.py  test_economic.py  test_enrich.py  test_ingest_horizons.py  test_ingest_lcdb.py  test_ingest_movis.py  test_ingest_neowise.py  test_ingest_sbdb.py  test_ingest_spectral.py  test_ml_classifier.py  test_orbital.py  test_overlays.py  test_physical.py  test_pipeline_integration.py  test_query.py  test_settings.py
web/: package-lock.json  package.json  vite.config.ts  vite.sandbox.config.ts
web/sandbox/: Sandbox.tsx  index.html  main.tsx
web/src/: App.css  App.tsx  index.css
web/src/api/: client.ts
web/src/components/: AboutModal.tsx  AsteroidDetail.tsx  AsteroidTable.tsx  ComparePanel.tsx  FilterBar.tsx  SearchBox.tsx  StatsCards.tsx  TimelineSlider.tsx
web/src/components/scene/: AsteroidCloud.tsx  FocusRing.tsx  MilkyWay.tsx  OrbitLine.tsx  OrbitZones.tsx  Planets.tsx  SolarSystem.tsx  SpacecraftPreview.tsx  SunGlow.tsx  TransferArc.tsx
web/src/hooks/: useAsteroids.ts  useStats.ts
web/src/types/: asteroid.ts
web/src/utils/: focusState.ts  kepler.ts  mining.ts  orbitUtils.ts  sceneConstants.ts  transfer.ts
web/src/utils/__tests__/: focusState.test.ts  transfer.test.ts
