[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "asteroid-cost-atlas"
version = "0.1.0"
description = "Scored catalog of asteroid mining and visit candidates from NASA SBDB"
authors = [{ name = "Ron Zehavi" }]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "requests>=2.31",
    "pandas>=2.0",
]

[project.scripts]
asteroid-ingest = "asteroid_cost_atlas.ingest.ingest_sbdb:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-requests",
    "types-PyYAML",
    "pandas-stubs",
]

[tool.hatch.build.targets.wheel]
packages = ["src/asteroid_cost_atlas"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing -q"

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
show_missing = true
omit = ["*/__init__.py"]
