[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "asteroid-cost-atlas"
version = "0.1.0"
description = "Scored catalog of asteroid mining and visit candidates from NASA SBDB"
authors = [{ name = "Ron Zehavi" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
keywords = ["asteroid", "orbital-mechanics", "space-resources", "data-engineering"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "pydantic>=2.0,<3.0",
    "pyyaml>=6.0,<7.0",
    "requests>=2.31,<3.0",
    "pandas>=2.0,<3.0",
    "pyarrow>=15.0,<20.0",
    "duckdb>=1.0,<2.0",
]

[project.urls]
Repository = "https://github.com/ronzehavi/asteroid-cost-atlas"
Issues = "https://github.com/ronzehavi/asteroid-cost-atlas/issues"

[project.scripts]
asteroid-ingest = "asteroid_cost_atlas.ingest.ingest_sbdb:main"
asteroid-clean = "asteroid_cost_atlas.ingest.clean_sbdb:main"
asteroid-enrich = "asteroid_cost_atlas.ingest.enrich:main"
asteroid-ingest-lcdb = "asteroid_cost_atlas.ingest.ingest_lcdb:main"
asteroid-ingest-neowise = "asteroid_cost_atlas.ingest.ingest_neowise:main"
asteroid-ingest-spectral = "asteroid_cost_atlas.ingest.ingest_spectral:main"
asteroid-ingest-movis = "asteroid_cost_atlas.ingest.ingest_movis:main"
asteroid-ingest-horizons = "asteroid_cost_atlas.ingest.ingest_horizons:main"
asteroid-score-orbital = "asteroid_cost_atlas.scoring.orbital:main"
asteroid-score-physical = "asteroid_cost_atlas.scoring.physical:main"
asteroid-score-composition = "asteroid_cost_atlas.scoring.composition:main"
asteroid-atlas = "asteroid_cost_atlas.scoring.economic:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-requests",
    "types-PyYAML",
    "pandas-stubs",
    "fastapi>=0.110",
    "httpx>=0.27",
]

ml = [
    "scikit-learn>=1.4",
]
web = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "slowapi>=0.1.9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/asteroid_cost_atlas"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = ["sklearn.*", "slowapi.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing -q --cov-fail-under=85"

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
show_missing = true
omit = ["*/__init__.py"]
